# python-sdk

./: .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  ARCHITECTURAL_REFACTOR_ANALYSIS.md  AWS_SSO_COMPATIBILITY.md  BACKEND_SEMANTIC_CONVENTION_FIX.md  BACKWARD_COMPATIBILITY_SUMMARY.md  BEDROCK_ACCESS_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMMIT_INSTRUCTIONS.md  COMMIT_SUMMARY.md  COMPREHENSIVE_V2_DOCUMENTATION_ANALYSIS.md  CONFIG_DRIVEN_ARCHITECTURE_SUMMARY.md  CONTRIBUTING.md  CORRECTED_DSL_ARCHITECTURE_V1_0.md  CORRECTED_FILE_STRUCTURE_DESIGN.md  COVERAGE_STANDARDS_UPDATE.md  CUTOVER_ANALYSIS.md  Dockerfile  Dockerfile.lambda  ENVIRONMENT_VARIABLES.md  FAILING_TESTS_ANALYSIS.md  FAILING_TESTS_FRAMEWORK_ANALYSIS.md  FINAL_ACCURATE_ANALYSIS.md  HONEYHIVE_SCHEMA_ECOSYSTEM_ANALYSIS.md  HYBRID_PROCESSING_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_COMPARISON_FINAL.md  IMPLEMENTATION_PLAN_ARCHITECTURE.md  IMPLEMENTATION_PLAN_COMPLETE_SUMMARY.md  IMPLEMENTATION_PLAN_DEPLOYMENT_STRATEGY.md  IMPLEMENTATION_PLAN_DETAILED_ARCHITECTURE.md  IMPLEMENTATION_PLAN_DETAILED_DSL.md  IMPLEMENTATION_PLAN_DSL.md  IMPLEMENTATION_PLAN_INTEGRATION.md  IMPLEMENTATION_PLAN_O1_ALGORITHMS.md  (+102 more)
.agent-os/: README.md  run_mcp_server.py
.cursor/: mcp.json
.github/: dependabot.yml
.speakeasy/: workflow.yaml
canonical_schema_analysis/: CANONICAL_SCHEMA_ANALYSIS.md  DSL_MAPPING_RULES.md  EventType.session_events.json  QUICK_REFERENCE.md  README.md  chain_events.json  model_events.json  session_events.json  tool_events.json
config/: __init__.py
docs/: AGENT_FRAMEWORK_INTEGRATION_ANALYSIS.md  AGENT_OS_COMPLIANCE.md  API_REFERENCE.md  API_REFERENCE.rst  BRING_YOUR_INSTRUMENTOR.rst  CLI_REFERENCE.rst  CONTENT_PARITY_ANALYSIS.md  DIVIO_REORGANIZATION_PLAN.md  DYNAMIC_TRACE_DECORATOR.md  EVALUATION_CHANGELOG.md  EVALUATION_CHANGELOG.rst  FEATURE_LIST.md  FEATURE_LIST.rst  HOSTING_STRATEGY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE.rst  LAMBDA_TESTING.rst  MERMAID_STANDARD.md  OPENINFERENCE_INTEGRATION.md  OPENINFERENCE_INTEGRATION.rst  README.md  README.rst  SETUP.md  TESTING.md  TESTING.rst  changelog.rst  changelog.rst.bak4  conf.py  gen_ref_pages.py  index.md  index.rst  requirements.txt  serve.py
event_analysis/: analysis.json  first_event_complete.json  raw_events.json  sample_events_detailed.json
examples/: README.md  README_google_ai.md  README_openinference_integration.md  advanced_usage.py  api_client_models_demo.py  backward_compatibility_examples.py  backwards_compatibility_demo.py  basic_usage.py  cli_example.py  client_side_evaluators.py  dataclass_alternative_example.py  debug_openai_instrumentor_spans.py  dynamic_trace_demo.py  enhanced_evaluation_demo.py  enhanced_tracing_demo.py  enrichment_verification.py  eval_example.py  eval_test.py  evaluate_with_adk_instrumentor.py  evaluate_with_enrichment.py  evaluation_example.py  fastapi_multi_session_example.py  get_tool_calls_for_eval.py  init_method_compatibility_demo.py  mcp_integration.py  migration_example.py  openinference_google_ai_integration.py  openinference_integration.py  openinference_integration_simple.py  pydantic_validation_demo.py  query_traces.py  requirements_google_ai.txt  setup.sh  simple_anthropic_integration.py  simple_google_adk_integration.py  simple_mcp_integration.py  simple_openai_integration.py  strands_integration.py  strands_simple_demo.py  test.py  (+8 more)
lambda_functions/: simple_test.py
openapi/: dataplane.yaml  openapi.yaml  v1.yaml
provider_response_schemas/: README.md  SCHEMA_SPEC.md  TRACE_SOURCE_RESEARCH.md  openai_response_schemas.md
scripts/: DOCUMENTATION_EXTRACTION_PLAN.md  README-tracer-benchmark.md  RESEARCH_PLAN.md  SPAN_ATTRIBUTE_RESEARCH.md  SPAN_RESEARCH_SUMMARY.md  backwards_compatibility_monitor.py  benchmark_bundle_formats.py  check-changelog-updated.py  check-docs-updated.py  check-documentation-compliance.py  check-feature-sync.py  compile_providers.py  docs-quality-backup.py  docs-quality.py  extract_sdk_schema.py  filter_wheel.py  generate_client.py  generate_dataclasses.py  generate_models.py  generate_models_and_client.py  generate_provider_template.py  generate_v0_models.py  generate_v1_client.py  install_python_versions.sh  prepare-readme.py  profile_universal_engine.py  publish.sh  research_span_attributes.py  run-basic-integration-tests.sh  run_tox.py  setup-dev.sh  setup-local-env.py  test_attribute_research.sh  test_openai_detection.py  test_openai_extraction.py  test_openai_performance.py  test_openai_performance_full.py  test_transform_extraction.py  test_two_tier_extraction.py  tracer-performance-benchmark.py  (+6 more)
tests/: Dockerfile  Makefile  README.md  README_COMPREHENSIVE_TESTING.md  __init__.py  conftest.py  helpers.py  requirements.txt  run_comprehensive_tests.py  run_testing_improvements.py  test.sh  test_async_conditional_behavior.py  test_asyncio_tracer.py  test_comprehensive_overhead_diagnostic.py  test_configurations.py  test_custom_comprehensive.py  test_datapoints.py  test_datasets.py  test_diy_tracer.py  test_enrich_span.py  test_event_id_enrichment.py  test_events.py  test_hh_tracer.py  test_hh_tracer_updates.py  test_honeyhive_span_exporter_comprehensive.py  test_http_instrumentation.py  test_langchain_tracer.py  test_llamaindex_tracer.py  test_mcp_integration.py  test_metrics.py  test_otel_tracer.py  test_otel_tracer_consolidated.py  test_projects.py  test_refactored_tracer_comprehensive.py  test_refactored_tracer_simple.py  test_tools.py  test_trace_class.py  utils.py
tests_v2/: INTEGRATION_TEST_ANALYSIS.md  conftest.py
universal_llm_discovery_engine_v2_0/: DSL_ARCHITECTURE_SEPARATION.md  PROBLEM_SCOPE_BREAKDOWN.md  README.md  SOURCE_SEMANTIC_CONVENTIONS_DSL_V1_0.md  UNIVERSAL_DSL_SPECIFICATION_V1_0.md
universal_llm_discovery_engine_v3_final/: ARCHITECTURE_FOUNDATION.md  DSL_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  README.md
universal_llm_discovery_engine_v4_final/: ARCHITECTURE_FOUNDATION.md  IMPLEMENTATION_PLAN.md  PROVIDER_SPECIFICATION.md  README.md  RESEARCH_REFERENCES.md
(+2328 files in other folders)
