[project]
name = "honeyhive"
version = "0.1.0"
description = "HoneyHive Python SDK - LLM Observability and Evaluation Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HoneyHive Team", email = "team@honeyhive.ai"}
]
keywords = ["llm", "observability", "evaluation", "tracing", "monitoring", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]

dependencies = [
    "httpx>=0.24.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "wrapt>=1.14.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "tox>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "typeguard>=4.0.0",
]

# Documentation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://honeyhive.ai"
Documentation = "https://docs.honeyhive.ai"
Repository = "https://github.com/honeyhiveai/python-sdk"
"Bug Tracker" = "https://github.com/honeyhiveai/python-sdk/issues"

[project.scripts]
honeyhive = "honeyhive.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/honeyhive"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["honeyhive"]

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name (for generated models)
    "C0301",  # line-too-long (for generated models)
    "C0302",  # too-many-lines (for generated models)
    "R0801",  # duplicate-code (acceptable in some cases)
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0904",  # too-many-public-methods
    "R0911",  # too-many-return-statements
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0915",  # too-many-statements
    "W0212",  # protected-access (acceptable for testing)
    "W0621",  # redefined-outer-name (acceptable in tests)
    "W0622",  # redefined-builtin (acceptable in some cases)
    "W0702",  # bare-except (acceptable in some cases)
    "W0718",  # broad-exception-caught (acceptable in some cases)
    "W0719",  # broad-exception-raised (acceptable in some cases)
    "W1309",  # f-string-without-interpolation
    "W0613",  # unused-argument (acceptable for interface compliance)
    "W0611",  # unused-import (acceptable for conditional imports)
    "C0415",  # import-outside-toplevel (acceptable in some cases)
    "E0401",  # import-error (acceptable in test files)
    "E0102",  # function-redefined (acceptable for decorators)
    "E1120",  # no-value-for-parameter (acceptable in some cases)
    "C0413",  # wrong-import-position (acceptable in some cases)
    "W0107",  # unnecessary-pass (acceptable in some cases)
    "W0603",  # global-statement (acceptable in some cases)
    "R0914",  # too-many-locals (acceptable in some cases)
    "R1702",  # too-many-nested-blocks (acceptable in some cases)
    "R1705",  # no-else-return (acceptable in some cases)
    "W0707",  # raise-missing-from (acceptable in some cases)
    "W1203",  # logging-fstring-interpolation (acceptable in some cases)
    "E1101",  # no-member (acceptable for dynamic attributes)
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 15
max-attributes = 20
max-bool-expr = 5
max-branches = 20
max-locals = 25
max-parents = 7
max-public-methods = 30
max-returns = 10
max-statements = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "api", "ui", "ui_", "id_", "ip_", "ip"]

[tool.pylint.master]
fail-under = 9.5

[tool.pylint.files]
ignore-patterns = [
    ".*generated\\.py$",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "opentelemetry.*",
    "wrapt.*",
    "click.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.env/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311, py312, py313
isolated_build = True

[testenv]
deps =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    httpx>=0.24.0
    opentelemetry-api>=1.20.0
    opentelemetry-sdk>=1.20.0
    opentelemetry-exporter-otlp-proto-http>=1.20.0
    wrapt>=1.14.0
    pydantic>=2.0.0
    python-dotenv>=1.0.0
    openai>=1.0.0
    click>=8.0.0
    pyyaml>=6.0

commands =
    pytest tests/unit/test_utils.py -v --asyncio-mode=auto
    pytest tests/unit/test_client.py -v --asyncio-mode=auto
    pytest tests/unit/test_tracer.py -v --asyncio-mode=auto
    pytest tests/unit/test_api.py -v --asyncio-mode=auto
    pytest tests/unit/test_providers.py -v --asyncio-mode=auto
    pytest tests/unit/test_evaluation.py -v --asyncio-mode=auto
    pytest tests/unit/test_http_instrumentation.py -v --asyncio-mode=auto
    pytest tests/integration/test_integrations.py -v --asyncio-mode=auto
    pytest tests/ -v --asyncio-mode=auto --cov=honeyhive --cov-report=term-missing

setenv =
    PYTHONPATH = {toxinidir}/src
    PYTHONUNBUFFERED = 1
    HH_API_KEY = test-api-key-12345
    HH_API_URL = https://api.honeyhive.ai
    HH_PROJECT = test-project
    HH_SOURCE = test
    HH_DEBUG_MODE = true
    HH_DISABLE_TRACING = false
    HH_DISABLE_HTTP_TRACING = false
    HH_OTLP_ENABLED = false
    HH_TEST_MODE = true

passenv =
    HH_API_KEY
    HH_API_URL
    HH_PROJECT
    HH_SOURCE
    HH_TEST_MODE
    HH_DEBUG_MODE
    HH_DISABLE_TRACING
    HH_DISABLE_HTTP_TRACING
    HH_OTLP_ENABLED
    HH_OTLP_ENDPOINT
    HH_OTLP_HEADERS

[testenv:unit]
commands =
    pytest tests/unit/ -v --asyncio-mode=auto

[testenv:integration]
commands =
    pytest tests/integration/ -v --asyncio-mode=auto
"""
