[project]
name = "honeyhive"
dynamic = ["version"]
description = "HoneyHive Python SDK - LLM Observability and Evaluation Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "HoneyHive Team", email = "team@honeyhive.ai"}
]
keywords = ["llm", "observability", "evaluation", "tracing", "monitoring", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
]

dependencies = [
    "httpx>=0.24.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0",
    "wrapt>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.5.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "rich>=13.9.4",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "tox>=4.0.0",
    "black~=26.3",
    "isort==5.13.2",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "typeguard>=4.0.0",
    "psutil>=5.9.0",
    "yamllint>=1.37.0",
    "openapi-python-generator>=2.1.0",  # For SDK generation (pydantic models + client)
    "docker>=7.0.0",  # For Lambda container tests
    "build>=1.4.2",  # For building packages
    "hatchling>=1.18.0",  # Build backend
]

# Documentation dependencies (properdocs + mkdocstrings, AST-based extraction via griffe).
# Pinned with `>=` to keep the docs build reproducible-ish; bump on demand.
#
# We use ProperDocs (https://properdocs.org) instead of MkDocs upstream. ProperDocs is a
# community fork of MkDocs 1.6 created in March 2026, after upstream pivoted to a
# "MkDocs 2" rewrite that breaks the existing plugin/theme ecosystem we rely on.
# ProperDocs ships a compat shim so the standard `mkdocs-*` plugins below
# (mkdocstrings, gen-files, literate-nav, section-index, material) work unchanged.
# Site config lives in properdocs.yml (ProperDocs's preferred name; mkdocs.yml is
# still accepted as a fallback).
#
# Note: griffe (vendored by mkdocstrings[python]) parses source as text, so the
# SDK's many optional integration deps (openai, anthropic, langchain, ...) do
# NOT need to be installed to render the reference docs.
docs = [
    "properdocs>=1.6",
    # mkdocs-material is required (not just a nice-to-have): both built-in
    # mkdocs themes (`mkdocs`, `readthedocs`) bundle highlight.js, which
    # re-tokenizes signature code blocks client-side and strips the <a>
    # tags that mkdocstrings injects for type cross-references. Material
    # uses Pygments only, so the server-rendered autoref links survive.
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",   # griffe-backed Python handler
    "mkdocs-gen-files>=0.5",         # generate ref pages at build time
    "mkdocs-literate-nav>=0.6",      # nav from a SUMMARY.md
    "mkdocs-section-index>=0.3",     # clickable section landing pages
    # mkdocstrings auto-detects black at runtime and uses it to pretty-print
    # function signatures (line-wrapping, trailing commas, etc). Without it,
    # signatures render on a single line. Pinned to match the version in the
    # `dev` extra so signatures format identically to the source.
    "black~=26.3",
]

# LLM Provider Integrations (OpenInference Instrumentors)
# Each integration group includes the instrumentor and commonly used provider SDK

# OpenAI (openinference-openai)
openinference-openai = [
    "openinference-instrumentation-openai>=0.1.0",
    "openai>=1.0.0",
]

# Anthropic (openinference-anthropic)
openinference-anthropic = [
    "openinference-instrumentation-anthropic>=0.1.0",
    "anthropic>=0.18.0",
]

# Claude Agents SDK (openinference-claude-agent-sdk)
openinference-claude-agent-sdk = [
    "openinference-instrumentation-claude-agent-sdk>=0.1.0",
    "claude-agent-sdk>=0.1.56",
]

# OpenAI Agents SDK (openinference-openai-agents)
openinference-openai-agents = [
    "openinference-instrumentation-openai-agents>=1.4.0",
    "openai-agents>=0.10.0",
]

# Google GenAI SDK (openinference-google-ai)
openinference-google-ai = [
    "openinference-instrumentation-google-genai>=0.1.0",
    "google-genai>=0.3.0",
]

# Google Agent Development Kit (openinference-google-adk)
openinference-google-adk = [
    "openinference-instrumentation-google-adk>=0.1.0",
    "google-adk>=1.28.1",
]

# AWS Bedrock (openinference-bedrock)
openinference-aws-bedrock = [
    "openinference-instrumentation-bedrock>=0.1.0",
    "boto3>=1.26.0",
]

# Azure OpenAI (openinference-openai)
openinference-azure-openai = [
    "openinference-instrumentation-openai>=0.1.0",
    "openai>=1.0.0",
    "azure-identity>=1.12.0",
]

# MCP (openinference-mcp)
openinference-mcp = [
    "openinference-instrumentation-mcp>=1.3.0",
]

# LiteLLM (openinference-litellm)
openinference-litellm = [
    "openinference-instrumentation-litellm>=0.1.30",
    "litellm>=1.0.0",
]

# LangChain + LangGraph (openinference-langchain)
# Covers both LangChain chains/agents and LangGraph StateGraph workflows.
openinference-langchain = [
    "openinference-instrumentation-langchain>=0.1.0",
    "langchain>=1.0.0",
]

# AWS Strands Agents (native OTel; Traceloop-shaped semantic conventions)
# Strands emits OpenTelemetry spans natively via strands.telemetry — no
# instrumentor is required. The HoneyHiveTracer's global TracerProvider is
# picked up automatically when initialized before agent construction.
# boto3 is the LKGV path (BedrockModel); for Anthropic-backed agents add
# `anthropic` separately.
aws-strands = [
    "strands-agents>=1.19.0",
    "boto3>=1.26.0",
]

# OpenLLMetry (Traceloop) Alternative Integrations
# Each integration group includes individual Traceloop instrumentor and commonly used provider SDK
# Note: Packages are named "opentelemetry-instrumentation-*" but are published by Traceloop

# OpenAI (traceloop-openai)
traceloop-openai = [
    "opentelemetry-instrumentation-openai>=0.58.0,<1.0.0",
    "openai>=1.0.0",
]

# Anthropic (traceloop-anthropic)
traceloop-anthropic = [
    "opentelemetry-instrumentation-anthropic>=0.58.0,<1.0.0",
    "anthropic>=0.17.0",
]

# Google Generative AI (traceloop-google-ai)
traceloop-google-ai = [
    "opentelemetry-instrumentation-google-generativeai>=0.60.0,<1.0.0",
    "google-generativeai>=0.3.0",
]

# AWS Bedrock (traceloop-bedrock)
traceloop-aws-bedrock = [
    "opentelemetry-instrumentation-bedrock>=0.58.0,<1.0.0",
    "boto3>=1.26.0",
]

# Azure OpenAI (traceloop-azure-openai)
traceloop-azure-openai = [
    "opentelemetry-instrumentation-openai>=0.58.0,<1.0.0",
    "openai>=1.0.0",
    "azure-identity>=1.12.0",
]

# MCP (traceloop-mcp)
traceloop-mcp = [
    "opentelemetry-instrumentation-mcp>=0.58.0,<1.0.0",
]

# LangChain + LangGraph (traceloop-langchain)
# Covers both LangChain and LangGraph through the same Traceloop instrumentor.
traceloop-langchain = [
    "opentelemetry-instrumentation-langchain>=0.58.0,<1.0.0",
    "langchain>=1.0.0",
]

# Note: Only documented integrations are included

# Convenience Groups (OpenInference Instrumentors)
# All Available OpenInference Integrations (documented only)
all-openinference = [
    "openinference-instrumentation-openai>=0.1.0",
    "openinference-instrumentation-anthropic>=0.1.0",
    "openinference-instrumentation-claude-agent-sdk>=0.1.0",
    "openinference-instrumentation-openai-agents>=1.4.0",
    "openinference-instrumentation-google-genai>=0.1.0",
    "openinference-instrumentation-google-adk>=0.1.0",
    "openinference-instrumentation-bedrock>=0.1.0",
    "openinference-instrumentation-litellm>=0.1.30",
    "openinference-instrumentation-langchain>=0.1.0",
    "openinference-instrumentation-mcp>=1.3.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "claude-agent-sdk>=0.1.56",
    "openai-agents>=0.10.0",
    "google-genai>=0.3.0",
    "google-adk>=1.28.1",
    "litellm>=1.0.0",
    "langchain>=1.0.0",
    "boto3>=1.26.0",
    "azure-identity>=1.12.0",
]

# Common LLM Providers (OpenInference Ecosystem)
openinference-llm-providers = [
    "openinference-instrumentation-openai>=0.1.0",
    "openinference-instrumentation-anthropic>=0.1.0",
    "openinference-instrumentation-google-genai>=0.1.0",
    "openinference-instrumentation-bedrock>=0.1.0",
    "openinference-instrumentation-litellm>=0.1.30",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=0.3.0",
    "litellm>=1.0.0",
    "boto3>=1.26.0",
]

# OpenLLMetry (Traceloop) Convenience Groups
# All Available Traceloop Integrations (documented only)
all-traceloop = [
    "opentelemetry-instrumentation-openai>=0.58.0,<1.0.0",
    "opentelemetry-instrumentation-anthropic>=0.58.0,<1.0.0",
    "opentelemetry-instrumentation-google-generativeai>=0.60.0,<1.0.0",
    "opentelemetry-instrumentation-bedrock>=0.58.0,<1.0.0",
    "opentelemetry-instrumentation-langchain>=0.58.0,<1.0.0",
    "opentelemetry-instrumentation-mcp>=0.58.0,<1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.17.0",
    "google-generativeai>=0.3.0",
    "langchain>=1.0.0",
    "boto3>=1.26.0",
    "azure-identity>=1.12.0",
]

# Common LLM Providers (Traceloop Ecosystem)
traceloop-llm-providers = [
    "opentelemetry-instrumentation-openai>=0.58.0,<1.0.0",
    "opentelemetry-instrumentation-anthropic>=0.58.0,<1.0.0",
    "opentelemetry-instrumentation-google-generativeai>=0.60.0,<1.0.0",
    "opentelemetry-instrumentation-bedrock>=0.58.0,<1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.17.0",
    "google-generativeai>=0.3.0",
    "boto3>=1.26.0",
]

[project.urls]
Homepage = "https://honeyhive.ai"
Documentation = "https://docs.honeyhive.ai"
Repository = "https://github.com/honeyhiveai/python-sdk"
"Bug Tracker" = "https://github.com/honeyhiveai/python-sdk/issues"

[project.scripts]
honeyhive = "honeyhive.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/honeyhive/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/honeyhive"]

[tool.hatch.build.targets.sdist]
exclude = ["openapi"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["honeyhive"]

[tool.pylint.messages_control]
disable = [
    "W0702",  # bare-except (acceptable in some cases)
    "W0718",  # broad-exception-caught (acceptable in some cases)
    "W0719",  # broad-exception-raised (acceptable for graceful degradation)
    "W0212",  # protected-access (approved for test files)
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 15
max-attributes = 20
max-bool-expr = 5
max-branches = 20
max-locals = 25
max-parents = 7
max-public-methods = 30
max-returns = 10
max-statements = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "api", "ui", "ui_", "id_", "ip_", "ip", "setUp", "tearDown"]

[tool.pylint.logging]
# Recognize safe_log as a logging function for proper lazy formatting analysis
logging-modules = ["logging", "honeyhive.utils.logger"]

[tool.pylint.master]
fail-under = 9.99

[tool.pylint.files]
ignore-patterns = [
    ".*generated\\.py$",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "httpx.*",
    "opentelemetry.*",
    "wrapt.*",
    "click.*",
    "yaml.*",
    "requests.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "honeyhive.experiments.evaluators"
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["_v0_archive"]
# Markers are defined in pytest.ini (authoritative). When pytest.ini is present,
# [tool.pytest.ini_options] markers are silently ignored by pytest — keep them
# in pytest.ini only to avoid drift.

[tool.coverage.run]
source = ["src/honeyhive"]
parallel = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.env/*",
    "*/.venv/*",
    "*/.tox/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
# Project-wide coverage requirement: 73%
fail_under = 73
show_missing = true
skip_covered = false
precision = 2
# Individual file coverage requirement: 70% (strongly recommended)
skip_empty = true

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

